crates/gpui_tea/tests/ui/unsupported_composite_attr.stderr
error: unsupported `composite` attribute
  --> tests/ui/unsupported_composite_attr.rs:18:28
   |
18 | #[composite(message = Msg, mode = "strict")]
   |                            ^^^^
